# DiggerGame

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Data/media/psd/: HouseTrim1.psd  HouseUniques1.psd
Digger/: ButtonComponent.h  CMakeLists.txt  GameDataManager.cpp  GameDataManager.h  LetterSwitchComponent.cpp  LetterSwitchComponent.h  Main.cpp  MenuComponent.h  SdlSoundSystem.cpp  SdlSoundSystem.h  ServiceLocator.cpp  ServiceLocator.h
Digger/Enemy/: EnemyComponent.cpp  EnemyComponent.h  EnemySpawnManager.cpp  EnemySpawnManager.h  EnemySpawnUpdateComponent.cpp  EnemySpawnUpdateComponent.h  EnemyState.cpp  EnemyState.h
Digger/Level/: EmeraldComponent.cpp  EmeraldComponent.h  GoldComponent.cpp  GoldComponent.h  GoldState.cpp  GoldState.h  LevelManager.cpp  LevelManager.h  TileMapComponent.cpp  TileMapComponent.h
Digger/Player/: InputManager.cpp  InputManager.h  LifeComponent.cpp  LifeComponent.h  MenuComponent.cpp  PlayerAccessor.cpp  PlayerAccessor.h  PlayerComponent.cpp  PlayerComponent.h  PlayerDamageComponent.cpp  PlayerDamageComponent.h  ProjectileComponent.cpp  ProjectileComponent.h  ScoreComponent.cpp  ScoreComponent.h
Minigin/: ButtonComponent.cpp  CMakeLists.txt  Component.cpp  Component.h  DeathComponent.cpp  DeathComponent.h  GameObject.cpp  GameObject.h  GamePadSystem.h  HitBoxComponent.cpp  HitBoxComponent.h  LevelManager.h  Main.cpp  Minigin.cpp  Minigin.h  NullSoundSystem.h  Observer.cpp  Observer.h  PlayerComponent.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SdlGamePadSystem.cpp  SdlGamePadSystem.h  SdlSoundSystem.cpp  SdlSoundSystem.h  ServiceLocator.cpp  ServiceLocator.h  SoundSystem.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  Transform.cpp  Transform.h
web/: index.html
